refactor: 테스트 기능 수정